UPDATES IssueDetail and ProjectIssues components; refines priority level display by changing span to div for better structure, adjusts CSS for improved layout and consistency, and modifies margin and font size for enhanced readability.

--- a/src/styles/IssueDetail.module.css
+++ b/src/styles/IssueDetail.module.css
@@ -26,10 +26,10 @@
 
 .issueContent {
     text-align: left;
-    margin-left: 5rem;
+    margin-left: 1rem;
 }
 .colAlign {
-    margin: 0.4rem;
+    
     font-size: 1.1rem;
     
     
@@ -74,24 +74,14 @@
     
     
 }
-.criticalPriority {
-    border: 1px solid black;
-    background-color: red;
-    color: white;
-    border-radius: 5%;
-    padding: .2rem .5rem .4rem .5rem;
-    border-radius: 10%;
-    
-    
-}
 
 .criticalPriority {
     border: 4px solid red;
-    
     color: red;
     border-radius: 10px;
     padding: .2rem .5rem .4rem .5rem;
     border-radius: 10%;
+    max-width: fit-content;
    
   }
   
@@ -101,6 +91,7 @@
     border-radius: 5%;
     padding: .3rem .6rem .5rem .6rem;
     border-radius: 10%;
+    max-width: fit-content;
  
   }
   
@@ -110,6 +101,7 @@
     border-radius: 5%;
     padding: .2rem .4rem .4rem .4rem;
     border-radius: 10%;
+    max-width: fit-content;
     
   }
   
@@ -120,6 +112,7 @@
     border-radius: 5%;
     padding: .2rem .4rem .4rem .4rem;
     border-radius: 10%;
+    max-width: fit-content;
    
   }
 .rowAlign {
@@ -130,4 +123,5 @@ hr {
     margin: 1rem 0;
     max-width: 85%;
     margin: 0 1rem 1rem 1rem;
+    max-width: fit-content;
 }
