--- a/src/styles/ProjectIssues.module.css
+++ b/src/styles/ProjectIssues.module.css
@@ -56,12 +56,13 @@
 
 .criticalPriority {
     border: 4px solid red;
-    
     color: red;
     border-radius: 10px;
     padding: .2rem .5rem .4rem .5rem;
     border-radius: 10%;
-   
+    font-size:.9rem;
+    max-width:fit-content;
+    margin: auto;
   }
   
   .highPriority {
@@ -70,6 +71,9 @@
     border-radius: 5%;
     padding: .3rem .6rem .5rem .6rem;
     border-radius: 10%;
+    font-size:.9rem;
+    max-width:fit-content;
+    margin: auto;
  
   }
   
@@ -79,6 +83,9 @@
     border-radius: 5%;
     padding: .2rem .4rem .4rem .4rem;
     border-radius: 10%;
+    font-size:.9rem;
+    max-width:fit-content;
+    margin: auto;
     
   }
   
@@ -89,6 +96,9 @@
     border-radius: 5%;
     padding: .2rem .4rem .4rem .4rem;
     border-radius: 10%;
+    font-size:.9rem;
+    max-width:fit-content;
+    margin: auto;
    
   }
   .issueText {
